# narwhal-plus-plus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE_0_1_GUIDE.md  PROJECT_SUMMARY.md  README.md  benchmark.ps1  run_cluster.ps1
.github/: markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  phase_implementation.md
.github/workflows/: ci.yml
formal/: README.md
formal/tla/: Mysticeti.cfg  Mysticeti.tla
include/narwhal/: async_network.hpp  common.hpp  config.hpp  consensus.hpp  consensus_engines.hpp  crypto.hpp  network.hpp  serializable.hpp  store.hpp  utils.hpp
src/: async_network.cpp  consensus.cpp  consensus_mysticeti.cpp  crypto.cpp  network.cpp  primary.cpp  store.cpp  worker.cpp
tests/: property_tests.cpp
